Adapt to Java 17