@@ -4,7 +4,6 @@ import static java.util.Objects.requireNonNull;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import de.cuioss.test.valueobjects.api.TestContract;
 import de.cuioss.test.valueobjects.api.contracts.VerifyBeanProperty;
@@ -22,7 +21,8 @@ import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 
 /**
- * Tests all given properties according to the given List of {@link PropertyMetadata}
+ * Tests all given properties according to the given List of
+ * {@link PropertyMetadata}
  *
  * @author Oliver Wolff
  * @param <T> Rule does not apply to annotations: There is no inheritance
@@ -39,8 +39,7 @@ public class BeanPropertyContractImpl<T> implements TestContract<T> {
     @Override
     public void assertContract() {
         final var builder = new StringBuilder("Verifying ");
-        builder.append(getClass().getName()).append("\nWith configuration: ")
-                .append(getInstantiator().toString());
+        builder.append(getClass().getName()).append("\nWith configuration: ").append(getInstantiator().toString());
         log.info(builder.toString());
 
         checkGetterAndSetterContract();
@@ -48,22 +47,17 @@ public class BeanPropertyContractImpl<T> implements TestContract<T> {
     }
 
     private void checkGetterAndSetterContract() {
-        final List<PropertyMetadata> readWriteProperties =
-            getInstantiator().getRuntimeProperties().getAllProperties()
-                    .stream().filter(p -> PropertyReadWrite.READ_WRITE.equals(p.getPropertyReadWrite()))
-                    .collect(Collectors.toList());
+        final var readWriteProperties = getInstantiator().getRuntimeProperties().getAllProperties().stream()
+                .filter(p -> PropertyReadWrite.READ_WRITE.equals(p.getPropertyReadWrite())).toList();
 
         if (readWriteProperties.isEmpty()) {
             log.warn(
                     "There are no properties defined that are readable and writable. Consider your configuration and/or the base class for your test.");
         } else {
-            log.info(
-                    "Verifying properties that are Read and Write: "
-                            + RuntimeProperties.extractNames(readWriteProperties));
+            log.info("Verifying properties that are Read and Write: "
+                    + RuntimeProperties.extractNames(readWriteProperties));
 
-            final List<PropertySupport> supportList =
-                readWriteProperties.stream().map(PropertySupport::new)
-                        .collect(Collectors.toList());
+            final var supportList = readWriteProperties.stream().map(PropertySupport::new).toList();
             final Object target = getInstantiator().newInstanceMinimal();
             for (final PropertySupport support : supportList) {
 
@@ -77,13 +71,11 @@ public class BeanPropertyContractImpl<T> implements TestContract<T> {
     }
 
     private void checkDefaultContract() {
-        final var defaultProperties =
-            getInstantiator().getRuntimeProperties().getDefaultProperties();
+        final var defaultProperties = getInstantiator().getRuntimeProperties().getDefaultProperties();
         if (defaultProperties.isEmpty()) {
             log.debug("No default properties configured");
         } else {
-            final List<PropertySupport> defaultPropertySupport =
-                defaultProperties.stream().map(PropertySupport::new).collect(Collectors.toList());
+            final var defaultPropertySupport = defaultProperties.stream().map(PropertySupport::new).toList();
             final Object target = getInstantiator().newInstanceMinimal();
             for (final PropertySupport support : defaultPropertySupport) {
                 support.assertDefaultValue(target);
@@ -92,32 +84,38 @@ public class BeanPropertyContractImpl<T> implements TestContract<T> {
     }
 
     /**
-     * Factory method for creating an instance of {@link BeanPropertyContractImpl} depending on the
-     * given parameter
+     * Factory method for creating an instance of {@link BeanPropertyContractImpl}
+     * depending on the given parameter
      *
-     * @param beanType identifying the type to be tested. Must not be null and must provide a no
-     *            args public constructor
-     * @param annotated the annotated unit-test-class. It is expected to be annotated with
-     *            {@link BeanPropertyContractImpl}, otherwise the method will return
-     *            {@link Optional#empty()}
-     * @param initialPropertyMetadata identifying the complete set of {@link PropertyMetadata},
-     *            where the actual {@link PropertyMetadata} for the bean tests will be filtered by
-     *            using the attributes defined within {@link BeanPropertyContractImpl}. Must not be
-     *            null. If it is empty the method will return {@link Optional#empty()}
-     * @return an instance Of {@link BeanPropertyContractImpl} in case all requirements for the
-     *         parameters are correct, otherwise it will return {@link Optional#empty()}
+     * @param beanType                identifying the type to be tested. Must not be
+     *                                null and must provide a no args public
+     *                                constructor
+     * @param annotated               the annotated unit-test-class. It is expected
+     *                                to be annotated with
+     *                                {@link BeanPropertyContractImpl}, otherwise
+     *                                the method will return
+     *                                {@link Optional#empty()}
+     * @param initialPropertyMetadata identifying the complete set of
+     *                                {@link PropertyMetadata}, where the actual
+     *                                {@link PropertyMetadata} for the bean tests
+     *                                will be filtered by using the attributes
+     *                                defined within
+     *                                {@link BeanPropertyContractImpl}. Must not be
+     *                                null. If it is empty the method will return
+     *                                {@link Optional#empty()}
+     * @return an instance Of {@link BeanPropertyContractImpl} in case all
+     *         requirements for the parameters are correct, otherwise it will return
+     *         {@link Optional#empty()}
      */
-    public static final <T> Optional<TestContract<T>> createBeanPropertyTestContract(
-            final Class<T> beanType, final Class<?> annotated,
-            final List<PropertyMetadata> initialPropertyMetadata) {
+    public static final <T> Optional<TestContract<T>> createBeanPropertyTestContract(final Class<T> beanType,
+            final Class<?> annotated, final List<PropertyMetadata> initialPropertyMetadata) {
 
         requireNonNull(beanType, "beantype must not be null");
         requireNonNull(annotated, "annotated must not be null");
         requireNonNull(initialPropertyMetadata, "initialPropertyMetadata must not be null");
 
         if (!annotated.isAnnotationPresent(VerifyBeanProperty.class)) {
-            log.debug("No annotation of type BeanPropertyTestContract available on class: "
-                    + annotated);
+            log.debug("No annotation of type BeanPropertyTestContract available on class: " + annotated);
             return Optional.empty();
         }
         if (initialPropertyMetadata.isEmpty()) {
@@ -125,10 +123,9 @@ public class BeanPropertyContractImpl<T> implements TestContract<T> {
             return Optional.empty();
         }
         final var instantiator = new DefaultInstantiator<>(beanType);
-        final var metadata =
-            AnnotationHelper.handleMetadataForPropertyTest(annotated, initialPropertyMetadata);
+        final var metadata = AnnotationHelper.handleMetadataForPropertyTest(annotated, initialPropertyMetadata);
 
-        return Optional.of(new BeanPropertyContractImpl<>(
-                new BeanInstantiator<>(instantiator, new RuntimeProperties(metadata))));
+        return Optional.of(
+                new BeanPropertyContractImpl<>(new BeanInstantiator<>(instantiator, new RuntimeProperties(metadata))));
     }
 }
