@@ -11,13 +11,11 @@ import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import de.cuioss.test.generator.TypedGenerator;
 import de.cuioss.test.valueobjects.generator.TypedGeneratorRegistry;
 import de.cuioss.test.valueobjects.generator.dynamic.GeneratorResolver;
 import de.cuioss.test.valueobjects.objects.impl.ExceptionHelper;
-import de.cuioss.tools.lang.SecuritySupport;
 import de.cuioss.tools.logging.CuiLogger;
 import de.cuioss.tools.string.Joiner;
 import lombok.AccessLevel;
@@ -35,8 +33,7 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
 
     private static final CuiLogger log = new CuiLogger(ConstructorBasedGenerator.class);
 
-    private static final String UNABLE_TO_CALL_CONSTRUCTOR_FOR_CLASS =
-        "Unable to call constructor '%s' for class '%s' due to: '%s'";
+    private static final String UNABLE_TO_CALL_CONSTRUCTOR_FOR_CLASS = "Unable to call constructor '%s' for class '%s' due to: '%s'";
 
     @NonNull
     private final Class<T> type;
@@ -47,28 +44,24 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
 
     @Override
     public T next() {
-        if (this.constructorGenerators.isEmpty()) {
+        if (constructorGenerators.isEmpty()) {
             try {
-                return this.constructor.newInstance();
+                return constructor.newInstance();
             } catch (final InstantiationException | IllegalAccessException | IllegalArgumentException
                     | InvocationTargetException e) {
                 throw new IllegalStateException(
-                        String.format(UNABLE_TO_CALL_CONSTRUCTOR_FOR_CLASS, this.constructor,
-                                this.type, e.getMessage()),
-                        e);
+                        String.format(UNABLE_TO_CALL_CONSTRUCTOR_FOR_CLASS, constructor, type, e.getMessage()), e);
             }
         }
         final var parameter = new ArrayList<>();
-        this.constructorGenerators.forEach(gen -> parameter.add(gen.next()));
+        constructorGenerators.forEach(gen -> parameter.add(gen.next()));
         try {
             logExtendedInformationAboutUsedConstructor(parameter);
-            return this.constructor.newInstance(parameter.toArray());
+            return constructor.newInstance(parameter.toArray());
         } catch (final InstantiationException | IllegalAccessException | IllegalArgumentException
                 | InvocationTargetException e) {
-            throw new IllegalStateException(
-                    format(UNABLE_TO_CALL_CONSTRUCTOR_FOR_CLASS, this.constructor,
-                            this.type, ExceptionHelper.extractCauseMessageFromThrowable(e)),
-                    e);
+            throw new IllegalStateException(format(UNABLE_TO_CALL_CONSTRUCTOR_FOR_CLASS, constructor, type,
+                    ExceptionHelper.extractCauseMessageFromThrowable(e)), e);
         }
     }
 
@@ -76,11 +69,11 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
         final var constructorModifierValue = constructor.getModifiers();
         if (!Modifier.isPublic(constructorModifierValue)) {
 
-            log.warn("!!! Attention : "
-                    + "A non public constructor will be used to create an instance for {}. "
-                    + "This is illegal and can cause unexpected behaviour. "
-                    + "Solution: provide a fitting generator instead!",
-                    constructor.getName());
+            log.warn("""
+                    !!! Attention :\s\
+                    A non public constructor will be used to create an instance for {}.\s\
+                    This is illegal and can cause unexpected behaviour.\s\
+                    Solution: provide a fitting generator instead!""", constructor.getName());
 
             final List<String> parameterInfo = new ArrayList<>(constructor.getParameters().length);
             for (final Parameter parameter : constructor.getParameters()) {
@@ -88,8 +81,8 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
             }
 
             final var modifier = Modifier.toString(constructorModifierValue);
-            final var constructorInfo = modifier + " " + constructor.getName()
-                    + "(" + Joiner.on(", ").skipNulls().join(parameterInfo) + ")";
+            final var constructorInfo = modifier + " " + constructor.getName() + "("
+                    + Joiner.on(", ").skipNulls().join(parameterInfo) + ")";
             log.info("Used constructor : {}", constructorInfo);
             log.info("Used constructor parameter : {}", logUsedValuesForConstructor(parameterValues));
         }
@@ -105,21 +98,20 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
 
     @Override
     public Class<T> getType() {
-        return this.type;
+        return type;
     }
 
     /**
-     * Factory method for creating an instance of {@link ConstructorBasedGenerator}. It first tries
-     * to find a public, than protected, package privates, private constructor. It always uses the
-     * constructor with the fewest arguments
+     * Factory method for creating an instance of {@link ConstructorBasedGenerator}.
+     * It first tries to find a public, than protected, package privates, private
+     * constructor. It always uses the constructor with the fewest arguments
      *
-     * @param type to be checked for constructors, must not be null, nor an interface, nor an
-     *            annotation nor an abstract-class nor an enum
-     * @return an {@link Optional} on the corresponding {@link TypedGenerator} if a constructor can
-     *         be found
+     * @param type to be checked for constructors, must not be null, nor an
+     *             interface, nor an annotation nor an abstract-class nor an enum
+     * @return an {@link Optional} on the corresponding {@link TypedGenerator} if a
+     *         constructor can be found
      */
-    public static final <T> Optional<TypedGenerator<T>> getGeneratorForType(
-            final Class<T> type) {
+    public static final <T> Optional<TypedGenerator<T>> getGeneratorForType(final Class<T> type) {
         if (!isReponsibleForType(type)) {
             return Optional.empty();
         }
@@ -132,29 +124,25 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
         constructors.sort(Comparator.comparingInt(Constructor::getParameterCount));
 
         // Find fitting public constructor
-        List<Constructor<?>> filteredConstructors = constructors.stream()
-                .filter(c -> Modifier.isPublic(c.getModifiers())).collect(Collectors.toList());
+        var filteredConstructors = constructors.stream().filter(c -> Modifier.isPublic(c.getModifiers())).toList();
         if (!filteredConstructors.isEmpty()) {
             return findFittingConstructor(type, filteredConstructors);
         }
 
         // Find fitting protected constructor
-        filteredConstructors = constructors.stream()
-                .filter(c -> Modifier.isProtected(c.getModifiers())).collect(Collectors.toList());
+        filteredConstructors = constructors.stream().filter(c -> Modifier.isProtected(c.getModifiers())).toList();
         if (!filteredConstructors.isEmpty()) {
             return findFittingConstructor(type, filteredConstructors);
         }
 
         // Find fitting package private constructor
-        filteredConstructors = constructors.stream()
-                .filter(c -> 0 == c.getModifiers()).collect(Collectors.toList());
+        filteredConstructors = constructors.stream().filter(c -> 0 == c.getModifiers()).toList();
         if (!filteredConstructors.isEmpty()) {
             return findFittingConstructor(type, filteredConstructors);
         }
 
         // Find fitting private constructor
-        filteredConstructors = constructors.stream()
-                .filter(c -> Modifier.isPrivate(c.getModifiers())).collect(Collectors.toList());
+        filteredConstructors = constructors.stream().filter(c -> Modifier.isPrivate(c.getModifiers())).toList();
         if (!filteredConstructors.isEmpty()) {
             return findFittingConstructor(type, filteredConstructors);
         }
@@ -169,15 +157,16 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
         return !type.isEnum() && !type.isInterface() && !Modifier.isAbstract(type.getModifiers());
     }
 
-    private static <T> Optional<TypedGenerator<T>> findFittingConstructor(
-            final Class<T> type, final List<Constructor<?>> constructorList) {
+    private static <T> Optional<TypedGenerator<T>> findFittingConstructor(final Class<T> type,
+            final List<Constructor<?>> constructorList) {
         log.debug("Searching constructor for class {}", type);
         if (1 == constructorList.size()) {
             log.debug("Only one constructor present, so choosing this one");
             return createForConstructor(type, constructorList.get(0));
         }
         for (final Constructor<?> con : constructorList) {
-            // Ok, try to find a constructor where the parameter are already registered Generator
+            // Ok, try to find a constructor where the parameter are already registered
+            // Generator
             final List<Class<?>> parameter = Arrays.asList(con.getParameterTypes());
             var allGeneratorAvailable = true;
             for (final Class<?> param : parameter) {
@@ -202,12 +191,11 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
         throw new IllegalStateException("No matching constructor found for class " + type);
     }
 
-    private static <T> Optional<TypedGenerator<T>> createForConstructor(
-            final Class<T> type, final Constructor<?> con) {
+    @SuppressWarnings("java:S3011") // owolff: Setting accessible is ok for test-code
+    private static <T> Optional<TypedGenerator<T>> createForConstructor(final Class<T> type, final Constructor<?> con) {
         @SuppressWarnings("unchecked")
         final var constructor = (Constructor<T>) con;
-
-        SecuritySupport.setAccessible(constructor, true);
+        constructor.setAccessible(true);
 
         final List<TypedGenerator<?>> generators = new ArrayList<>();
         for (final Class<?> parameterType : constructor.getParameterTypes()) {
@@ -222,7 +210,6 @@ public class ConstructorBasedGenerator<T> implements TypedGenerator<T> {
             }
             generators.add(GeneratorResolver.resolveGenerator(parameterType));
         }
-        return Optional.of(
-                new ConstructorBasedGenerator<>(type, generators, constructor));
+        return Optional.of(new ConstructorBasedGenerator<>(type, generators, constructor));
     }
 }
